<resources>
    <string name="app_name">FavoriteContacts</string>
    <string name="_218_765_4126">218-765-4126</string>
    <string name="_218_867_5309">218-867-5309</string>
    <string name="_218_952_7145">218-952-7145</string>
    <string name="call">Call</string>
    <string name="jenny">Jenny</string>
    <string name="robert">Robert</string>
    <string name="sammy">Sammy</string>
    <string name="send_message">Send Message</string>

    <string-array name="text_messages_array">
        <item>Hi!</item>
        <item>How Are You?</item>
        <item>On My Way!</item>
        <item>What do you want for dinner?</item>
        <item>I am Alive!</item>
    </string-array>

</resources>
