<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="css.cis3334.favoritecontacts.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:text="@string/jenny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName1"
            android:layout_weight="0.11" />

        <TextView
            android:text="@string/_218_867_5309"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNumber1"
            android:layout_weight="0.33" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCallPerson1"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:text="@string/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTextPerson1"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/robert"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName2"
            android:layout_weight="3834.59" />

        <TextView
            android:text="@string/_218_765_4126"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNumber2"
            android:layout_weight="15647.85" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="Call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCallPerson2"
            tools:ignore="ButtonStyle,HardcodedText"
            android:layout_weight="1" />

        <Button
            android:text="@string/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTextPerson2"
            tools:ignore="ButtonStyle,HardcodedText"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:weightSum="1"
        tools:ignore="InefficientWeight">

        <TextView
            android:text="@string/sammy"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName3"
            android:layout_width="050dp"
            android:layout_weight="0.07"
            tools:ignore="NestedWeights" />

        <TextView
            android:text="@string/_218_765_4126"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNumber3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="353dp"
        android:layout_height="wrap_content">

        <Button
            android:text="Call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCallPerson3"
            tools:ignore="ButtonStyle,HardcodedText"
            android:layout_weight="0.46" />

        <Button
            android:text="@string/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTextPerson3"
            tools:ignore="ButtonStyle,HardcodedText"
            android:layout_weight="0.62" />

    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTextMessages"
        android:entries="@array/text_messages_array" />

</LinearLayout>
